# video_lib

./: .gitignore  README.md  example_usage.py  pyproject.toml  specs.md  video_gen.sh  video_lib_cli.py
.claude/: settings.local.json
.claude/skills/: SKILLS.md
.claude/skills/book_translation/: SKILL.md
.claude/skills/code/: SKILLS.md
.claude/skills/code/references/: abstractions.md  folder_structure_and_cli.md
.claude/skills/generate-video/: SKILL.md
.claude/skills/resona-tts/: SKILL.md
.claude/skills/run_claude_codes/: SKILL.md
.claude/skills/short_videos/: SKILL.md
scripts/: generate_contents.py  rename_video_folders.py
src/video_lib/: __init__.py  generator.py  job_processor.py  main.py  models.py  parser.py  utils.py
src/video_lib/audio/: __init__.py  resona_client.py
src/video_lib/content/: prompts.py
src/video_lib/llm/: __init__.py  client.py
src/video_lib/storage/: __init__.py  paths.py
src/video_lib/viewer/: __init__.py  app.py  viewer_helper.py
src/video_lib/viewer/templates/: index.html
video_lib/: generator.py  job_processor.py  models.py  parser.py  utils.py
video_lib/audio/: resona_client.py  voices.py
video_lib/content/: __init__.py  content_styles.py  prompts.py
video_lib/llm/: client.py
video_lib/scripts/: generate_contents.py  rename_video_folders.py
video_lib/storage/: cache.py  paths.py
video_lib/viewer/: app.py  viewer_helper.py
video_lib/viewer/templates/: book.html  index.html  viewer.html
